fixes text wrap in description

--- a/public/css/styles-my-reservations.css
+++ b/public/css/styles-my-reservations.css
@@ -21,3 +21,7 @@
 .cancel-anchor {
     cursor: pointer;
 }
+
+div.description {
+    word-break: break-word;
+}
